# echo-server

./: .gitignore  CHANGELOG.md  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  echo-server.c  tcpd.c
.github/: pr-label-config.yaml  release-please-config.json  semantic.yml
.github/workflow/: triage-prs.yaml
.github/workflows/: assets-update.yaml  build.yaml  check.yaml  release-please.yaml  stale-packages.yaml  triage-issues.yaml  triage-prs.yaml
kind/: cluster.yaml
nomad/: echo-server.nomad.hcl
src/: BUILD.bazel  echo-server.c  helpers.c  helpers.h
