# https://bazel.build/reference/be/c-cpp
load("@rules_cc//cc:defs.bzl", "cc_binary")
# https://github.com/bazelbuild/rules_pkg
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
# https://github.com/bazel-contrib/rules_oci/blob/main/docs/cpp.md
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")

# Rules for C/C++ application build
cc_binary(
  name = "bin",
    srcs = [
      "echo-server.c",
      "helpers.c",
      "helpers.h",
    ],
    copts = [
      "-Wall"
      ],
)

# Rules for container image builds
pkg_tar(
    name = "tar",
    srcs = [":bin"], # ref to name above in cc_binary()
)

oci_image(
    name = "image_arm64",
    base = "@distroless_cc_debian12", # defined in MODULE.bazel
    # os = "linux",
    # architecture = "amd64",
    tars = [":tar"], # ref to name above in pkg_tar()
    entrypoint = ["/bin"], # ref to output above in cc_binary, same as name field
)

oci_load(
    name = "load",
    image = ":image_arm64", # ref to name above in oci_image()
    repo_tags = ["ghcr.io/hwakabh/echo-server:local"],
)

oci_push(
    name = "push",
    image = ":image_arm64", # ref to name above in oci_image()
    repository = "ghcr.io/hwakabh/echo-server",
    remote_tags = ["latest"],
)
